--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="scrollBar.css" />
     <title>Homepage | Spotlight</title>
   </head>
@@ -16,7 +18,10 @@
     <!--Cabeçalho-->
     <header id="header">
       <nav id="navBar">
-        <a href="#photo" class="notAnim" id="logo"> <h1>Spotlight</h1></a>
+        <a href="#photo" class="notAnim" id="logo"
+          ><img src="img/icon/logo.webp" />
+          <h1>Spotlight</h1></a
+        >
         <button id="menu">
           <div id="top-bar" class="menuBar"></div>
           <div id="middle-bar" class="menuBar"></div>
