--- a/joao.html
+++ b/joao.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="sobre.css" />
     <link rel="stylesheet" href="scrollBar.css" />
-    <title>sobre:João</title>
+    <title>João | Sobre</title>
   </head>
   <body>
     <!--Cabeçalho-->
     <header>
       <nav id="navBar">
-        <a href="index.html" class="notAnim" id="logo"> <h1>Spotlight</h1></a>
+        <a href="index.html" class="notAnim" id="logo">
+          <img src="img/icon/logo.webp" />
+          <h1>Spotlight</h1></a
+        >
       </nav>
     </header>
     <!-- FIM Cabeçalho-->
